Added Kotlin Android plugin, Xposed metadata, and uncaught exception handler

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true" />
+        <meta-data
+            android:name="xposeddescription"
+            android:value="Shows current cycle data usage in status bar" />
+        <meta-data
+            android:name="xposedminversion"
+            android:value="30" />
+
     </application>
 
 </manifest>
