--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ android {
         applicationId "io.github.francoiscampbell.xposeddatausage"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.5"
+        versionCode 2
+        versionName "0.6"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
