--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,8 @@ android {
     }
 }
 
-repositories {
-    mavenLocal()
-}
-
 dependencies {
-    provided 'de.robv:xposedbridgeapi:80'
+    provided files('libs/XposedBridgeApi-20150213.jar')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
