--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,22 @@ kapt {
 }
 
 dependencies {
-    provided files('libs/XposedBridgeApi-20150213.jar')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
+    //Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    //Xposed
+    provided files('libs/XposedBridgeApi-20150213.jar')
+
+    //support lib
+    compile 'com.android.support:appcompat-v7:23.3.0'
+
+    //Dagger
     compile 'com.google.dagger:dagger:2.0.2'
     kapt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    //test
+    testCompile 'junit:junit:4.12'
+    kaptTest 'com.google.dagger:dagger-compiler:2.0.2'
+    testCompile 'org.mockito:mockito-all:1.10.19'
 }
