--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:value="30" />
 
         <activity
-            android:name=".settings.SettingsActivity"
+            android:name=".nonmodule.SettingsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,10 +29,10 @@
         </activity>
 
         <activity-alias
-            android:name=".settings.SettingsActivity-Alias"
+            android:name=".nonmodule.SettingsActivity-Alias"
             android:enabled="true"
             android:label="@string/settings_activity_name"
-            android:targetActivity=".settings.SettingsActivity">
+            android:targetActivity=".nonmodule.SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
